# STM32F407VET6_development_board

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
source/: CMakeLists.txt
source/FSMC_ILI9341/: .mxproject  CMakeLists.txt  FSMC_ILI9341.ioc
source/FSMC_ILI9341/Inc/: main.h
source/FSMC_ILI9341/STM32CubeIDE/: .cproject  .project  STM32F407VETX_RAM.ld
source/FSMC_ILI9341/Src/: gpio.c  main.c  stm32f4xx_it.c  usbd_desc.c
source/FSMC_ILI9341/application/: Drivers.cpp  application.cpp
source/FSMC_ILI9341/application/Driver/: Display.hpp  TTY.hpp  all.hpp
source/FSMC_ILI9341/application/Driver/Display/: DIMENSIONS.hpp  Singleton.cpp  Singleton.hpp
source/FSMC_ILI9341/application/Driver/TTY/: Singleton.hpp
source/PWM_micro_servo/: .mxproject  CMakeLists.txt  PWM_micro_servo.ioc
source/PWM_micro_servo/Inc/: tim.h
source/PWM_micro_servo/STM32CubeIDE/: .project
source/PWM_micro_servo/Src/: gpio.c  main.c  tim.c
source/PWM_micro_servo/application/: Drivers.cpp  Drivers.hpp  application.cpp  config.hpp
source/PWM_micro_servo/application/Driver/: MicroServo.hpp  StatusLeds.hpp  all.hpp
source/PWM_micro_servo/application/Driver/MicroServo/: Singleton-impl.hpp  Singleton.cpp  Singleton.hpp
source/PWM_micro_servo/application/Driver/TTY/: Singleton.cpp
source/SPI_L3G4200D/: CMakeLists.txt  SPI_L3G4200D.ioc
source/SPI_L3G4200D/Inc/: main.h  stm32f4xx_hal_conf.h
source/SPI_L3G4200D/Src/: gpio.c  main.c  spi.c
source/SPI_L3G4200D/application/: Drivers.cpp  application.cpp  config.hpp
source/SPI_L3G4200D/application/Driver/: Base.cpp  Base.hpp  IMU.hpp  all.hpp
source/SPI_L3G4200D/application/Driver/IMU/: Singleton-impl.hpp  Singleton.cpp  Singleton.hpp
source/SPI_L3G4200D/application/Driver/StatusLeds/: SIGNAL.hpp  Singleton.cpp  Singleton.hpp
source/adc/STM32CubeIDE/: .project
source/adc/Src/: adc.c  gpio.c  main.c
source/adc/application/: application.cpp  drivers.h
source/adc/application/driver/: all.h
source/adc/application/driver/knob/: gpio.h  singleton.h
source/adc/application/driver/status_leds/: singleton.cpp
source/adc_potentiometer/: .mxproject  CMakeLists.txt  adc.ioc
source/adc_potentiometer/Inc/: stm32f4xx_hal_conf.h
source/adc_potentiometer/application/: application.cpp  drivers.cpp
source/adc_potentiometer/application/driver/: base.h
source/adc_potentiometer/application/driver/knob/: singleton.cpp
source/fsmc_dma_ili9341/: Makefile  Makefile.config
source/fsmc_dma_ili9341/inc/: config.h  drivers.h
source/fsmc_dma_ili9341/inc/driver/: base.h  tty.h
source/fsmc_dma_ili9341/src/: application.cpp
source/fsmc_dma_ili9341/src/driver/: status_leds.cpp  tty.cpp
source/fsmc_ili9341/: CMakeLists.txt  gen.ioc
source/fsmc_ili9341/Inc/: stm32f4xx_hal_conf.h
source/fsmc_ili9341/STM32CubeIDE/: .project  STM32F407VETX_FLASH.ld
source/fsmc_ili9341/Src/: gpio.c
source/fsmc_ili9341/application/driver/: status_leds.h
source/fsmc_ili9341/application/driver/display/: singleton.cpp  singleton.h
source/fsmc_ili9341/application/driver/tty/: singleton.h
source/gpio/: CMakeLists.txt  generated.ioc
source/gpio/STM32CubeIDE/: .cproject  STM32F407VETX_RAM.ld
source/gpio/Src/: main.c
source/gpio/application/: application.cpp  drivers.cpp  drivers.h  util.h
source/gpio/application/driver/: all.h  base.h  status_leds.cpp  status_leds.h
source/gpio/application/driver/status_leds/: defs.h  handle.cpp  handle.h  singleton.cpp  singleton.h
source/gpio_blink/: CMakeLists.txt  gpio.ioc
source/gpio_blink/Inc/: main.h
source/gpio_blink/STM32CubeIDE/: .project  STM32F407VETX_FLASH.ld
source/gpio_blink/application/driver/: base.h
source/lcd_with_fsmc/: .mxproject  CMakeLists.txt
source/lcd_with_fsmc/Inc/: stm32f4xx_it.h
source/lcd_with_fsmc/Src/: fsmc.c  main.c
source/lcd_with_fsmc/application/: drivers.cpp
source/lcd_with_fsmc/application/driver/: all.h  base.cpp  base.h  display.h
source/pwm_dimmer/: .mxproject  CMakeLists.txt  README.md  pwm.ioc  pwm_dimmer.ioc
source/pwm_dimmer/STM32CubeIDE/: .project
source/pwm_dimmer/Src/: tim.c
source/pwm_dimmer/application/: application.cpp  config.h  drivers.cpp
source/pwm_dimmer/application/driver/: all.h  dimmer.h
source/pwm_micro_servo/: .mxproject  CMakeLists.txt  README.md  pwm_micro_servo.ioc
source/pwm_micro_servo/Inc/: stm32f4xx_hal_conf.h
source/pwm_micro_servo/Src/: gpio.c  main.c  tim.c
source/pwm_micro_servo/application/: application.cpp  config.h  drivers.cpp
source/pwm_micro_servo/application/driver/: all.h  base.h  knob.h  micro_servo.h
source/sandbox/: .mxproject  CMakeLists.txt  README.md  application.cpp  sandbox.ioc
source/sandbox/application/: application.cpp  drivers.cpp
source/spi_l3gd20/: .mxproject  CMakeLists.txt  spi_l3gd20.ioc
source/spi_l3gd20/Inc/: main.h
source/spi_l3gd20/STM32CubeIDE/: .project  STM32F407VETX_FLASH.ld
source/spi_l3gd20/Src/: gpio.c
source/spi_l3gd20/application/: application.cpp  config.h  drivers.cpp
source/spi_l3gd20/application/driver/: all.h  base.h  imu.h
source/tty_over_uart/: CMakeLists.txt  generated.ioc
source/tty_over_uart/STM32CubeIDE/: .project
source/tty_over_uart/application/: application.cpp  config.h  drivers.cpp
source/tty_over_uart/application/driver/: all.h  base.h  status_leds.cpp  status_leds.h  tty.cpp  tty.h
source/tty_over_vcp/: CMakeLists.txt  tty_over_vcp.ioc
source/tty_over_vcp/Inc/: main.h
source/tty_over_vcp/STM32CubeIDE/: .project
source/tty_over_vcp/application/: application.cpp  config.h
source/tty_over_vcp/application/driver/: status_leds.cpp  status_leds.h  tty.cpp  tty.h
source/uart_tty/: .mxproject  CMakeLists.txt  README.md  uart_tty.ioc
source/uart_tty/STM32CubeIDE/: .cproject  STM32F407VETX_FLASH.ld
source/uart_tty/Src/: gpio.c  main.c
source/uart_tty/application/: application.cpp
source/uart_tty/application/driver/: all.h
source/vcp_tty/: CMakeLists.txt  vcp_tty.ioc
source/vcp_tty/STM32CubeIDE/: .cproject
source/vcp_tty/Src/: main.c
source/vcp_tty/application/driver/: tty.h
(+54 files in other folders)
