# add_subdirectory(sandbox)
# add_subdirectory(gpio_blink)
# add_subdirectory(uart_tty)
# add_subdirectory(vcp_tty)
# add_subdirectory(adc_potentiometer)
# add_subdirectory(pwm_dimmer)
# add_subdirectory(pwm_micro_servo)
add_subdirectory(FSMC_ILI9341)
add_subdirectory(SPI_L3G4200D)
add_subdirectory(PWM_micro_servo)
# add_subdirectory(fsmc_dma_ili9341)
