project(gpio_blink CXX C ASM)

add_stm_executable(
	NAME ${PROJECT_NAME}
	LINKER_SCRIPT ${PROJECT_SOURCE_DIR}/STM32CubeIDE/STM32F407VETX_FLASH.ld

	./application/application.cpp
	./application/driver/all.h
	./application/driver/base.cpp
	./application/driver/base.h
	./application/drivers.cpp
	./application/drivers.h
	./application/util.h
	./application/driver/status_leds.cpp
	./application/driver/status_leds.h
	./Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f407xx.h
	./Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
	./Drivers/CMSIS/Device/ST/STM32F4xx/Include/system_stm32f4xx.h
	./Drivers/CMSIS/Include/cmsis_armcc.h
	./Drivers/CMSIS/Include/cmsis_armclang.h
	./Drivers/CMSIS/Include/cmsis_compiler.h
	./Drivers/CMSIS/Include/cmsis_gcc.h
	./Drivers/CMSIS/Include/cmsis_iccarm.h
	./Drivers/CMSIS/Include/cmsis_version.h
	./Drivers/CMSIS/Include/core_armv8mbl.h
	./Drivers/CMSIS/Include/core_armv8mml.h
	./Drivers/CMSIS/Include/core_cm0.h
	./Drivers/CMSIS/Include/core_cm0plus.h
	./Drivers/CMSIS/Include/core_cm1.h
	./Drivers/CMSIS/Include/core_cm23.h
	./Drivers/CMSIS/Include/core_cm33.h
	./Drivers/CMSIS/Include/core_cm3.h
	./Drivers/CMSIS/Include/core_cm4.h
	./Drivers/CMSIS/Include/core_cm7.h
	./Drivers/CMSIS/Include/core_sc000.h
	./Drivers/CMSIS/Include/core_sc300.h
	./Drivers/CMSIS/Include/mpu_armv7.h
	./Drivers/CMSIS/Include/mpu_armv8.h
	./Drivers/CMSIS/Include/tz_context.h
	./Drivers/STM32F4xx_HAL_Driver/Inc/Legacy/stm32_hal_legacy.h
	./Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_cortex.h
	./Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_def.h
	./Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dma_ex.h
	./Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dma.h
	./Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_exti.h
	./Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_flash_ex.h
	./Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_flash.h
	./Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_flash_ramfunc.h
	./Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_gpio_ex.h
	./Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_gpio.h
	./Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h
	./Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pwr_ex.h
	./Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pwr.h
	./Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rcc_ex.h
	./Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rcc.h
	./Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_tim_ex.h
	./Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_tim.h
	./Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal.c
	./Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cortex.c
	./Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma.c
	./Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma_ex.c
	./Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_exti.c
	./Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash.c
	./Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash_ex.c
	./Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash_ramfunc.c
	./Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_gpio.c
	./Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pwr.c
	./Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pwr_ex.c
	./Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc.c
	./Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc_ex.c
	./Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim.c
	./Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim_ex.c
	./Inc/gpio.h
	./Inc/main.h
	./Inc/stm32f4xx_hal_conf.h
	./Inc/stm32f4xx_it.h
	./Inc/sys.h
	./Src/gpio.c
	./Src/main.c
	./Src/stm32f4xx_hal_msp.c
	./Src/stm32f4xx_it.c
	./Src/sys.c
	./Src/system_stm32f4xx.c
	./STM32CubeIDE/Application/Startup/startup_stm32f407vetx.s
	./STM32CubeIDE/Application/User/syscalls.c
	./STM32CubeIDE/Application/User/sysmem.c
)

target_include_directories(
	${PROJECT_NAME}.elf PRIVATE

	./application
	./Drivers
	./Drivers/CMSIS
	./Drivers/CMSIS/Device
	./Drivers/CMSIS/Device/ST
	./Drivers/CMSIS/Device/ST/STM32F4xx
	./Drivers/CMSIS/Device/ST/STM32F4xx/Include
	./Drivers/CMSIS/Device/ST/STM32F4xx/Source
	./Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates
	./Drivers/CMSIS/Include
	./Drivers/STM32F4xx_HAL_Driver
	./Drivers/STM32F4xx_HAL_Driver/Inc
	./Drivers/STM32F4xx_HAL_Driver/Inc/Legacy
	./Drivers/STM32F4xx_HAL_Driver/Src
	./Inc
	./Src
	./STM32CubeIDE
	./STM32CubeIDE/Application
	./STM32CubeIDE/Application/Startup
	./STM32CubeIDE/Application/User
	./STM32CubeIDE/Drivers
	./STM32CubeIDE/Drivers/CMSIS
	./STM32CubeIDE/Drivers/STM32F4xx_HAL_Driver
)

target_link_libraries(
	${PROJECT_NAME}.elf

	fosl-math
	fosl-arm-util
)
